--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp ./manifest.json build/",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "export": "rm -rf extension.zip &&  cd build/ && zip -r ../extension.zip .",
+    "prod": "yarn build && yarn export"
   },
   "eslintConfig": {
     "extends": [
